--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,17 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/Gabriel/Documents/work-eclipse/ia-semaforo/.settings/jFuzzyLogic.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Gabriel/Documents/work-eclipse/ia-semaforo/.settings/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Gabriel/Documents/work-eclipse/ia-semaforo/.settings/jcommon-1.0.23.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Gabriel/Documents/work-eclipse/ia-semaforo/.settings/jfreechart-1.0.19.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Gabriel/Documents/work-eclipse/ia-semaforo/.settings/jfreechart-1.0.19-experimental.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Gabriel/Documents/work-eclipse/ia-semaforo/.settings/jfreechart-1.0.19-swt.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Gabriel/Documents/work-eclipse/ia-semaforo/.settings/jfreesvg-2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Gabriel/Documents/work-eclipse/ia-semaforo/.settings/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Gabriel/Documents/work-eclipse/ia-semaforo/.settings/orsoncharts-1.4-eval-nofx.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Gabriel/Documents/work-eclipse/ia-semaforo/.settings/orsonpdf-1.6-eval.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Gabriel/Documents/work-eclipse/ia-semaforo/.settings/servlet.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Gabriel/Documents/work-eclipse/ia-semaforo/.settings/swtgraphics2d.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
